[package]
name = "bbox-2d"
version = "0.1.0"
authors = ["Titus Tienaah <titus.intdxdt@gmail.com>"]
description = "Cartesian minimum bounding box - [bbox-2d is bounding-box-2d]"
edition="2018"

[[bin]]
name = "01"
path = "example/01.rs"

[dependencies]
geom-2d = { git = "https://github.com/intdxdt/geom-2d", branch="master"}
coordinate = { git = "https://github.com/intdxdt/coordinate", branch="master"}
math-util = { git = "https://github.com/intdxdt/math-util", branch="master"}
serde =   { version = "1.0.101", features = ["derive"] }
rstar = "0.5.1"

[dev-dependencies]
serde_json = "1.0.41"


