[package]
name = "bbox-2d"
version = "0.1.0"
authors = ["Titus Tienaah <titus.intdxdt@gmail.com>"]
description = "Cartesian minimum bounding box - [bbox-2d is bounding-box-2d]"
edition="2018"

[[bin]]
name = "01"
path = "example/01.rs"

[dependencies]
math-util = { git = "https://github.com/intdxdt/math-util", branch="master"}
rstar = { git = "https://github.com/intdxdt/rstar", branch="master"}
serde =   { version = "1.0.101", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.41"


